--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	
+	<meta name="viefport" content="width=device-width, initial-scale=1.0"/>
+	
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<title>Flappy Bird</title>
 </head>
 <body>
 	
 
 	
-	
-
-	<canvas id="canvas" width="288" height="512"></canvas>
-
-
+	<section class="bg">
+		<div class="canvas__bg">
+			<canvas id="canvas" width="288px" height="512px" ></canvas>
+		</div>
+	</section>
 
 
 	<script type="text/javascript" src="js/main.js"></script>
