--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 
 
 	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/import.js"></script>
 </body>
 </html>
